Fix issue with clicking on buttons in ProfileNavigationSidebar